--- a/manuscript/introduction.qmd
+++ b/manuscript/introduction.qmd
@@ -1,10 +1,9 @@
 ---
-title: "Introduction"
 editor: visual
 ---
 
 ```{r}
-#| label: set-up
+#| label: set-up-intro
 #| echo: false
 #| message: false
 library(targets)
@@ -12,19 +11,24 @@ library(tarchetypes)
 
 ```
 
+## Introduction
+
 *\[Global change\]* Anthropogenic global changes linked to land-use change, resource exploitation, climate change, invasive alien species, and pollution pose major and accelerating threats to biodiversity and ecosystem functioning [@Ipbes2019-sd]. These global change drivers do not act in isolation, however, but occur simultaneously and often interact in complex ways so that their cumulative impacts may exceed the sum of single drivers [@Speiser2022-st; @Komatsu2019-yr]. The vast majority of empirical global change studies focus on only one, or perhaps two drivers, and rarely assess interactions [@rillig2019role; @Zandalinas2021-gp]. This is problematic because such studies may underestimate the overall pressures on biodiversity, thereby limiting our ability to predict the consequences of projected climate and environmental changes [@Speiser2022-st; @Komatsu2019-yr; @rillig2019role; @Oliver2014-wy]. To improve our understanding of global change impacts on biodiversity and ecosystem functioning, now and in the future, we therefore urgently need studies that explicitly consider multiple global change drivers and their interactions.
 
 *\[Mountains and GC\]* Mountains harbor unique biodiversity and provide important ecosystem functions and services such as carbon sequestration, water cycling, and grazing pastures; underpinning the lives and livelihoods of hundreds of millions of people [@egan2017mountain]. In many regions of the world, alpine vegetation has been managed for grazing and fodder production within socio-ecological systems of transhumance or mixed agriculture for centuries [@Austrheim2001-nu; @Bunce2004-kn]. During the last decades, faster warming at higher elevations have been observed at many mountain ranges[@Ipcc2022-jw; @pepin2015elevation; @Pepin2022-fy] and climate change impacts have changed species distributions [@steinbauer2018accelerated], community structure and dynamics [@Vandvik2020-hu; @Alexander2015-gu], and ecosystem functioning [@Ipbes2019-sd; @Schroter2005-dy; @Schirpke2013-kh] along elevational gradients. At the same time alpine ecosystems are affected by other global change drivers such as atmospheric nitrogen deposition [@Humbert2016-wg] and change in land use, including both intensification and abandonment of grazing regimes [@Austrheim2001-nu; @Shukla2019-es; @macdonald2000agricultural].
 
 *\[Mechanism\]* In alpine vegetation, including grassland, heath, and tundra, plant productivity is generally temperature limited and warmer climate will thus often result in increased plant growth, leading to more standing biomass [@elmendorf2012plot; @fazlioglu2021warming], with a positive feedback to productivity (@fig-concept a). These vegetation changes have implications for biodiversity, operating via changes in the nature and intensity of species interactions within alpine plant communities. In particular, as climate warms and biomass increases, we expect a shift from the facilitative plant-plant interactions that tend to dominate under high environmental stress towards the competitive interactions characteristic of more environmentally benign conditions, in line with the ‘Stress Gradient Hypothesis’; see e.g. [@bertness1994positive; @he2013global]. These shifts in the direction and intensity of the dominant plant-plant interactions in response to warming may again lead to changes in species composition and diversity, with lower-stature and less competitive alpine specialist species decreasing in abundance and diversity as they are exposed to increased competition for light from a taller and denser vegetation sward, an effect that may be exacerbated if they are exposed to more competitive range-shifting lowland generalists [@Vandvik2020-hu; @Alexander2015-gu; @lynn2023traits; @winkler2019responses]. Another global change driver with major impacts on the structure and diversity of terrestrial ecosystems, including alpine vegetation, is atmospheric nitrogen deposition [@Ipbes2019-sd]. As plant growth and biomass in alpine vegetation is often co-limited by temperature and nutrients [@Korner2003-kg], the specific effects of added nitrogen tend to be similar to those of increased temperature; increased growth, taller and denser vegetation, and intensified competition for light [@Humbert2016-wg] (@fig-concept a). Accordingly, an experiment that combined warming and nitrogen addition treatments in alpine vegetation found that both drivers have qualitatively similar effects; increased plant growth and loss of diversity via increased competition for light [@Klanderud2005-yx].
 
+![Impacts of the global change drivers climate warming, atmospheric nitrogen deposition, and grazing on alpine plant communities, and the experimental design to assess interactions among multiple drivers. a) Schematic of the hypothesized impacts of these three major drivers on alpine plant diversity, illustrating how their impacts occur through the same ecological mechanisms (productivity, which again affects standing biomass). The plus and minus signs indicate the specific relationship between the drivers and mechanisms, and the rack-wheel indicates a positive feedback between productivity and biomass. b) Illustration of how the effect of grazing on diversity is related to standing biomass, and hence can be affected by warming or nitrogen addition. Positive values on the y axis indicate an increase and negative values a decrease in diversity in response to grazing (relative to ungrazed controls), and the grey solid line indicates no effect. The non solid dark grey lines shows the expected shifting effect of intermediate (dashed) and intensive (dotted) grazing intensity on diversity as standing biomass increases (see text). The yellow arrows exemplify conditions under which intermediate or intensive grazing is expected to decrease or increase diversity. The gray square indicates conditions under which grazing can be beneficial for diversity due to release from competitive plant-plant interactions as biomass is reduced, the white background indicates conditions under which grazing can reduce diversity due to loss of facilitative interactions as biomass is reduced. Nitrogen deposition and warming (brown and pink arrows) will shift the community towards higher biomass, with implications for the effect of grazing. c) A fully factorial experiment to assess warming, nitrogen addition and grazing replicated in two sites, an alpine and a sub-alpine plant community. Warmed communities were transplanted from the alpine to the sub-alpine or from the sub-alpine to the lowland site, in fully factorial combinations with grazing and nitrogen addition treatments. The treatments are ambient (gray), warming (pink), nitrogen deposition (gray to brown (ambient temperature) or pink to brown (warmed plots), crossed with four levels of simulated grazing (yellow); none (C), intermediate (one scissor), intensive (two scissors) and natural grazing (sheep). The arrows indicate the direction of transplant. Inset shows location of the study sites in Western Norway.](figures/concept.png){#fig-concept}
+
 ```{r}
 #| label: fig-concept
 #| echo: false
+#| eval: false
 #| warning: false
-#| fig-cap: Impacts of the global change drivers climate warming, atmospheric nitrogen deposition, and grazing on alpine plant communities, and the experimental design to assess interactions among multiple drivers. a) Schematic of the hypothesized impacts of these  three major drivers on alpine plant diversity, illustrating how their impacts occur through the same ecological mechanisms (productivity, which again affects standing biomass). The plus and minus signs indicate the specific relationship between the drivers and mechanisms, and the rack-wheel indicates a positive feedback between productivity and biomass. b) Illustration of how the effect of grazing on diversity is related to standing biomass, and hence can be affected by warming or nitrogen addition. Positive values on the y axis indicate an increase and negative values a decrease in diversity in response to grazing (relative to ungrazed controls), and the grey solid line indicates no effect. The non solid dark grey lines shows the expected shifting effect of intermediate (dashed) and intensive (dotted) grazing intensity on diversity as standing biomass increases (see text). The yellow arrows exemplify conditions under which intermediate or intensive grazing is expected to decrease or increase diversity. The gray square indicates conditions under which grazing can be beneficial for diversity due to release from competitive plant-plant interactions as biomass is reduced, the white background indicates conditions under which grazing can reduce diversity due to loss of facilitative interactions as biomass is reduced. Nitrogen deposition and warming (brown and pink arrows) will shift the community towards higher biomass, with implications for the effect of grazing. c) A fully factorial experiment to assess warming, nitrogen addition and grazing replicated in two sites, an alpine and a sub-alpine plant community. Warmed communities were transplanted from the alpine to the sub-alpine or from the sub-alpine to the lowland site, in fully factorial combinations with grazing and nitrogen addition treatments. The treatments are ambient (gray), warming (pink), nitrogen deposition (gray to brown (ambient temperature) or pink to brown (warmed plots), crossed with four levels of simulated grazing (yellow); none (C), intermediate (one scissor), intensive (two scissors) and natural grazing (sheep). The arrows indicate the direction of transplant. Inset shows location of the study sites in Western Norway.
+#| fig-cap: Impacts of the global change drivers climate warming, atmospheric nitrogen deposition, and grazing on alpine plant communities, and the experimental design to assess interactions among multiple drivers. a) Schematic of the hypothesized impacts of these three major drivers on alpine plant diversity, illustrating how their impacts occur through the same ecological mechanisms (productivity, which again affects standing biomass). The plus and minus signs indicate the specific relationship between the drivers and mechanisms, and the rack-wheel indicates a positive feedback between productivity and biomass. b) Illustration of how the effect of grazing on diversity is related to standing biomass, and hence can be affected by warming or nitrogen addition. Positive values on the y axis indicate an increase and negative values a decrease in diversity in response to grazing (relative to ungrazed controls), and the grey solid line indicates no effect. The non solid dark grey lines shows the expected shifting effect of intermediate (dashed) and intensive (dotted) grazing intensity on diversity as standing biomass increases (see text). The yellow arrows exemplify conditions under which intermediate or intensive grazing is expected to decrease or increase diversity. The gray square indicates conditions under which grazing can be beneficial for diversity due to release from competitive plant-plant interactions as biomass is reduced, the white background indicates conditions under which grazing can reduce diversity due to loss of facilitative interactions as biomass is reduced. Nitrogen deposition and warming (brown and pink arrows) will shift the community towards higher biomass, with implications for the effect of grazing. c) A fully factorial experiment to assess warming, nitrogen addition and grazing replicated in two sites, an alpine and a sub-alpine plant community. Warmed communities were transplanted from the alpine to the sub-alpine or from the sub-alpine to the lowland site, in fully factorial combinations with grazing and nitrogen addition treatments. The treatments are ambient (gray), warming (pink), nitrogen deposition (gray to brown (ambient temperature) or pink to brown (warmed plots), crossed with four levels of simulated grazing (yellow); none (C), intermediate (one scissor), intensive (two scissors) and natural grazing (sheep). The arrows indicate the direction of transplant. Inset shows location of the study sites in Western Norway.
 
-knitr::include_graphics("figures/concept.png")
+#knitr::include_graphics("figures/concept.png")
 ```
 
 *\[Mechanism grazing\]* In contrast to warming and nutrient addition, grazing animals affect plant communities primarily through removing biomass and acting as disturbance agents through grazing and trampling, although we note that their effects on productivity are complex as they also add nutrients addition from urine and dung (@fig-concept a). Importantly, the effect of changes in biomass removal and disturbance on biodiversity should vary across environmental contexts, depending on the dominant biotic interactions within communities. Specifically, when environmental conditions are harsh, productivity low, and where facilitative interactions dominate, increased grazing is expected to lead to loss of facilitative interactions and may thus negatively impact diversity (white area in @fig-concept b). In contrast, in more productive systems, increased removal of biomass by grazers can lead to release from competitive interactions and hence increased diversity [@Austrheim2001-nu; @niedrist2009plant; @Bernes2015-yg] (grey area in @fig-concept b). The magnitude of these effects of grazing on biodiversity thus depend both on the direction and intensity of plant-plant interactions within the vegetation (i.e., on productivity and/or environmental harshness, the x-axis in @fig-concept b) and on the intensity of grazing (i.e., the amount of biomass removed; dashed and dotted lines and arrows in @fig-concept b)[@cingolani2005grazing; @milchunas1988generalized; @milchunas1993quantitative].
